--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,15 +7,15 @@
 }
 
 :root {
-  --linear-grad: linear-gradient(to right, #c03535,  #ff4b4b);
-  --grad-clr1: #c03535;
-  --grad-clr2: #ff4b4b;
+  --linear-grad: linear-gradient(to right, white,rgba(0, 62, 128, 0.255));
+  --grad-clr1:transparent
+  --grad-clr2: #df4b4b;
 }
 
 
 body {
   height: 100vh; 
-  background:rgba(1, 1, 1, 0.757);
+  background:rgba(108, 167, 144, 0.757);
   display: grid;
   place-content: center; 
   font-family: 'Poppins', sans-serif;
@@ -26,11 +26,9 @@ body {
   position: relative; 
   width: 850px;
   height: 500px; 
-  background-color: #5e5d5dcc;
   box-shadow: 25px 30px 55px rgba(228, 217, 217, 0.467);
   border-radius: 13px;
   overflow: hidden;
-  
 }
 
 .form-container {
@@ -58,15 +56,12 @@ form {
   justify-content: center;
   padding: 0px 50px;  
 }
-
 h1 {
-  color: #f4eaea;
+  color: black;
 }
-
 .social-container {
   margin: 20px 0px; 
 }
-
 .social-container a {
   border: 1px solid #DDD;
   border-radius: 50%;
@@ -77,17 +72,15 @@ h1 {
   height: 40px;
   width: 40px;
 }
-
 span {
   font-size: 12px;
+  color: white;
 }
-
 .infield {
   position: relative;
   margin: 8px 0px; 
   width: 100%;
 }
-
 input {
   width: 100%;
   padding: 12px 15px; 
@@ -95,7 +88,6 @@ input {
   border: none;
   outline: none;
 }
-
 label {
   position: absolute;
   left: 50%;
@@ -106,45 +98,38 @@ label {
   background: var(--linear-grad);
   transition: width 0.3s ease;
 }
-
 input:focus ~ label {
   width: 100%;
 }
-
 a {
-  color: #f9f0f0;
+  color: #0b0a0a;
   font-size: 14px;
   text-decoration: none; 
   margin: 15px 0px;
 }
-
 a.forgot {
   padding-bottom: 3px;
-  border-bottom: 2px solid #EEE; 
+  border-bottom: 2px solid #1c1b1b; 
 }
-
 button {
   border-radius: 20px;
   border: 1px solid var(--grad-clr1);
   background: var(--grad-clr2);
-  color: #FFF;
+  color: #110f0f;
   font-size: 12px;
   font-weight: bold; 
   padding: 12px 45px; 
   letter-spacing: 1px;
   text-transform: uppercase; 
 }
-
 .form-container button {
   margin-top: 17px;
   transition: 80ms ease-in;
 }
-
 .form-container button:hover {
-  background: #FFF;
+  background-color:  rgba(228, 217, 217, 0.467);
   color: var(--grad-clr1);
 }
-
 .overlay-container {
   position: absolute;
   top: 0;
@@ -155,7 +140,6 @@ button {
   transition: transform 0.6s ease-in-out;
   z-index: 9;
 } 
-
 #overlayBtn {
   cursor: pointer;
   position: absolute;
@@ -164,11 +148,10 @@ button {
   transform: translateX(-50%);
   width: 143.67px;
   height: 40px; 
-  border: 1px solid #FFF;
+  border: 1px solid #080707;
   background: transparent; 
   border-radius: 20px;
 } 
-
 .overlay {
   position: relative;
   background: var(--linear-grad);
@@ -178,7 +161,6 @@ button {
   width: 250%;
   transition: transform 0.6s ease-in-out;
 } 
-
 .overlay-panel {
   position: absolute; 
   display: flex;
@@ -191,62 +173,51 @@ button {
   width: 340px;  
   transition: 0.6s ease-in-out;
 } 
-
 .overlay-left {
   right: 60%;
-  transform: translateX(-12%);
+  transform: translateY(-10%);
 }
-
 .overlay-right {
   right: 0;
-  transform: translateX(0%);
+  transform: translateY(0%);
 } 
-
 .overlay-panel h1 {
-  color: #FFF; 
+  color: black; 
 }
-
 p {
   font-size: 14px;
+  color: black;
   font-weight: 300;
   line-height: 20px;
   letter-spacing: 0.5px;
   margin: 25px 0px 35px;
 }
-
 .overlay-panel button {
   border: none;
-  background-color: transparent;
+  background-color: ;
 } 
-
 .right-panel-active .overlay-container {
   transform: translateX(-150%);
 }
-
 .right-panel-active .overlay {
   transform: translateX(50%);
 }
-
 .right-panel-active .overlay-left {
   transform: translateX(25%);
 }
-
 .right-panel-active .overlay-right {
   transform: translateX(35%);
 }
-
 .right-panel-active .sign-in-container {
   transform: translateX(20%);
   opacity: 0;
 }
-
 .right-panel-active .sign-up-container {
   transform: translateX(66.7%);
   opacity: 1;
   z-index: 5;
   animation: show 0.6s;
 }
-
 @keyframes show {
   0%, 50% {
     opacity: 0;
@@ -257,11 +228,9 @@ p {
     z-index: 5;
   }
 }
-
 btnScaled {
   animation: scaleBtn 0.6s;
 }
-
 @keyframes scaleBtn {
   0% {
     width: 143.67px;
@@ -288,7 +257,7 @@ btnScaled {
   width: 500px;
   height: 500px;
   border-radius: 50%;
-  background: linear-gradient(to bottom, #c03535, #ff4b4b);
+  background: linear-gradient(to bottom,black);
   bottom: 50%;
   right: 50%;
   transform: translate(-40%, 38%);
