--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,6 @@
 
 <html lang="en">
-
 </html>
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,18 +10,12 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="script.js" defer></script>
 </head>
-
 <body>
   <div class="container" id="container">
     <div class="form-container sign-up-container">
-      <form action="/signup" method="post">
+    <form action="/signup" method="post">
         <h1>Create Account</h1>
-        <div class="social-container">
-          <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-          <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <span>or use your email for registration</span>
+        <span> please use your email for Signup</span>
         <div class="infield">
           <input type="text" placeholder="User Name" name="username">
           <label></label>
@@ -37,17 +29,12 @@
           <label></label>
         </div>
         <button>Sign Up</button>
-      </form>
+      </form> 
     </div>
     <div class="form-container sign-in-container">
       <form action="/login" method="post">
-        <h1>Sign in</h1>
-        <div class="social-container">
-          <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-          <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <span>or use your account</span>
+        <h1>"Sign in"</h1>
+        <span> "Sign in your account"</span>
         <div class="infield">
           <input type="text" placeholder="Username" name="username" />
           <label></label>
@@ -63,13 +50,13 @@
     <div class="overlay-container" id="overlayCon">
       <div class="overlay">
         <div class="overlay-panel overlay-left">
-          <h1>Hello again!</h1>
-          <p>To keep in touch, please login with your credentials</p>
+          <h1>"Hi there!"</h1>
+          <p>To stay connected, kindly sign in using your credentials</p>
           <button>Sign In</button>
         </div>
         <div class="overlay-panel overlay-right">
-          <h1>Hello again!</h1>
-          <p>Enter your credentials and start account with us</p>
+          <h1>"Hey again!"</h1>
+          <p>Submit your credentials to create and activate your account now</p>
           <button id="signUpBtn">Sign Up</button>
         </div>
       </div>
