--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style3.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Document</title>
+  <title> Create User</title>
 </head>
 
 <body>
-  <div class="min-h-screen w-full flex justify-center bg-slate-600  p-5">
+  <div class="min-h-screen w-full flex justify-center bg-black  p-5">
 
-    <div class=" card1  w-[30%] bg-gray-700 rounded-lg text-white shadow-slate-200 shadow-lg pt-4 p-8 ">
-      <h2 class="text-3xl mb-2 text-green-300 text-center underline  ">Create account</h2>
+    <div class=" card1  w-[30%] bg-white-700 rounded-lg text-white shadow-slate-200 shadow-lg pt-2 p-8 ">
+      <h2 class="text-3xl mb-5 text-white-300 text-center">Create Employees</h2>
 
       <form class="mt-4" action="/createuser" method="post" enctype="multipart/form-data">
 
@@ -23,17 +23,16 @@
         <label for="email">Email:</label>
         <input class="px-2  mb-3 bg-transparent border rounded-md border-zinc-300   " type="text" placeholder="Name" name="email"> <br>
 
-        <label for="mobile No">Mobile No:</label>
-        <input class="px-2  mb-3 bg-transparent border rounded-md border-zinc-300   " type="number" placeholder="Mobile No" name="mobile">
+        <label for="mobile No">Phone No:</label>
+        <input class="px-2  mb-3 bg-transparent border rounded-md border-zinc-300   " type="number" placeholder="Phone No" name="mobile">
         <br>
         <label for="designation">Designation:</label>
-        <select class="px-2  mb-3 bg-slate-600 border rounded-md border-zinc-300   " name="designation">
+        <select class="px-2  mb-3 bg-black  border rounded-md border-zinc-300   " name="designation">
           <option class="bg-transparent " value="hr">HR</option>
           <option class="bg-transparent " value="manager">Manager</option>
           <option class="bg-transparent " value="sales">Sales</option>
         </select>
         <br>
-
         <label>Gender:</label>
         <input class="mb-2" type="radio" id="male" name="gender" value="male">
         <label for="male">Male</label>
@@ -54,7 +53,7 @@
         <label for="fileUpload">Upload File:</label>
         <input class="mt-1" type="file" id="fileUpload" name="fileUpload"><br><br>
 
-        <input class="px-4  py-1 bg-blue-500 border rounded-md text-basic ml-2" type="submit" value="Submit" id="">
+        <input class="px-4  py-1 bg-transparent  border rounded-md text-basic ml-2" type="submit" value="Submit" id="">
       </form>
 
     </div>
